WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214120
[iOS] Occasional crash under -[UIView _setViewDelegate:] when presenting date and time pickers
https://bugs.webkit.org/show_bug.cgi?id=214120
Summary
[iOS] Occasional crash under -[UIView _setViewDelegate:] when presenting date...
Wenson Hsieh
Reported
2020-07-08 20:58:28 PDT
<
rdar://problem/65246918
>
Attachments
Patch
(18.76 KB, patch)
2020-07-08 21:19 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-07-08 21:19:20 PDT
Created
attachment 403843
[details]
Patch
Darin Adler
Comment 2
2020-07-08 22:33:22 PDT
Comment on
attachment 403843
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403843&action=review
> Source/WebKit/ChangeLog:31 > + Make it possible to test date and time picker presentation and dismissal by calling into the private testing-
These testing hooks seem a little complicated in their own right. Wish there was a more straightforward pattern.
Wenson Hsieh
Comment 3
2020-07-09 08:13:05 PDT
Comment on
attachment 403843
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403843&action=review
>> Source/WebKit/ChangeLog:31 >> + Make it possible to test date and time picker presentation and dismissal by calling into the private testing- > > These testing hooks seem a little complicated in their own right. Wish there was a more straightforward pattern.
Yes! I think that ideally, we’d want to limit this kind of test-specific logic to the actual testing harness (WebKitTestRunner) as much as possible, but it’s tricky here because WKTR can’t really get at the context menu interaction or listen for its delegate methods. Maybe a simpler, polling-based approach would be more maintainable in the long run...
EWS
Comment 4
2020-07-09 08:15:34 PDT
Committed
r264170
: <
https://trac.webkit.org/changeset/264170
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403843
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug